--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,19 @@ src/Actio.Api/obj/Debug/netcoreapp2.0/*.*
 src/Actio.Common/obj/Debug/netcoreapp2.0/*.*
 src/Actio.Services./Debug/netcoreapp2.0/Activities/obj/*.*
 src/Actio.Services.Identity/obj/Debug/netcoreapp2.0/*.*
+src/Actio.Api/obj/Debug/netcoreapp2.0/Actio.Api.csproj.CoreCompileInputs.cache
+src/Actio.Api/obj/Actio.Api.csproj.nuget.cache
+src/Actio.Api/obj/Actio.Api.csproj.nuget.g.props
+src/Actio.Api/obj/Actio.Api.csproj.nuget.g.targets
+src/Actio.Api/obj/Debug/netcoreapp2.0/Actio.Api.csproj.CoreCompileInputs.cache
+src/Actio.Common/obj/Actio.Common.csproj.nuget.cache
+src/Actio.Common/obj/Actio.Common.csproj.nuget.g.props
+src/Actio.Common/obj/Debug/netstandard2.0/Actio.Common.csproj.CoreCompileInputs.cache
+src/Actio.Services.Activities/obj/Actio.Services.Activities.csproj.nuget.cache
+src/Actio.Services.Activities/obj/Actio.Services.Activities.csproj.nuget.g.props
+src/Actio.Services.Activities/obj/Actio.Services.Activities.csproj.nuget.g.targets
+src/Actio.Services.Activities/obj/Debug/netcoreapp2.0/Actio.Services.Activities.csproj.CoreCompileInputs.cache
+src/Actio.Services.Identity/obj/Actio.Services.Identity.csproj.nuget.cache
+src/Actio.Services.Identity/obj/Actio.Services.Identity.csproj.nuget.g.props
+src/Actio.Services.Identity/obj/Actio.Services.Identity.csproj.nuget.g.targets
+src/Actio.Services.Identity/obj/Debug/netcoreapp2.0/Actio.Services.Identity.csproj.CoreCompileInputs.cache
